public/styles.css
:root {
    --userColor: #4b4f75; /* Default value */
  }

.userColored {
color: var(--userColor);
}

/*big stuff----------------------*/

body {
    margin: 0;
    font-family: Arial, sans-serif;
}


/*game container-----------------------*/
.container {
    display: flex;
    height: 100vh;
    padding-bottom: 200px;
    box-sizing: border-box;
    background-color: rgb(144, 173, 207);
    flex-direction: column; /* Arrange items top to bottom */
    align-items: center; /* Center the content horizontally */
}

.leftToRight {
    display: flex;
    justify-content: center;
    align-items: flex-start;
}

/*above canvas-------------------*/

#timerDisplay
{
    font-size: 24px;
}

#wordDisplay {
    font-size: 2.5em; /* Adjust title size */
    display: inline-block; /* Prevent full width occupation */
    margin: 20px;
  }

.checkbox-block {
    display: flex;
    align-items: center;
    margin: 20px;
}
.checkbox-block input[type="checkbox"] {
    width: 30px;
    height: 30px;
}
.checkbox-block .text-container {
    margin-left: 10px;
}
.checkbox-block .big-text {
    font-size: 24px;
}
.checkbox-block .small-text {
    font-size: 14px;
}


/*canvas-----------------------*/

.canvas-container {
    background-color: white;
    border-radius: 5px;
    position: relative;
}

  
.grid {
    display: grid;
    aspect-ratio: 1/1;
    height: 400px;
    padding: 10px;
    position: relative; /* Ensure pseudo-element is positioned relative to this container */
    overflow: hidden;
    transition: box-shadow 0.3s ease-in-out;
    box-shadow: none; /* Reset by default */
    box-sizing: border-box;
}
.grid[data-complete="true"] {
    box-shadow: 0 0 30px rgb(201, 223, 255); /* Enhanced glow on hover */
}

.square {
    background-color: white;
}

.square.painted {
    background-color: black;
}



.hover-text {
    position: fixed; /* Changed to fixed */
    display: none;
    background-color: #ff00ff;
    color: white;
    padding: 5px 10px;
    border-radius: 5px;
    z-index: 5;
}

/*toooooooooooooooooooooooooooools*/

.selectable-tool-container {
    display: flex;
    justify-content: center;
  }
  
  .selectable-tool-input {
    display: none; /* Hide the default checkbox */
  }
  
  .selectable-tool-label {
    display: flex;
    align-items: center;
    cursor: pointer;
    background-color: #ccc; /* Default background color */
    box-sizing: border-box;
    justify-content: center;
    padding: 0px 10px;

    border-radius: 10%;

    font-size: 24px; /* Adjust icon size */


  }

  
  .selectable-tool-input:checked + .selectable-tool-label {
    background-color: #00a2e8; /* Background color when checked */
  }

  

.hold-button {

    display: flex;
    width: auto;
    padding: 0px 10px;
    justify-content: center;

    background-color: #fff;
    border: none;
    color: #b92222;
    font-size: 24px;
    cursor: pointer;
    position: relative;
    overflow: hidden;
    outline: none;
    align-items: center;
    background-color: #ccc; /* Default background color */

    border-radius: 10%;
}

.hold-button::before {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 0;
    background-color: #b92222;
    z-index: 1;
    transition: none; /* Default to no transition for instant reset */
}

.hold-button:active::before {
    height: 100%;
    transition: height 1s cubic-bezier(0,1.06,1,.69); /* Fast start, slow end */
}

.hold-button span {
    position: relative;
    z-index: 2;
}


.colorsAndTools {
    margin-top: 15px;
    display: flex;
    padding: 10px 10px;
    justify-content: center;
    background-color: white;
    border-radius: 5px;
}

.color-palette {
    display: flex;
    width: 420px;
    flex-wrap: wrap;
    justify-content: center;
  }
  
  .color-button {
    width: 30px;
    height: 30px;
    border: #ffffff;
    margin: 5px;
    cursor: pointer;
    border-radius: 10%;
    transition: transform 0.5s cubic-bezier(.68,-0.55,.27,1.55); /* Apply transition to both states */
  }


.color-button[data-selected="true"] {
    transform: scale(1.5); /* Scale the element to 120% of its original size */
    transition: transform 0.3s cubic-bezier(.68,-0.55,.27,1.55); /* Add transition for bounce effect */
}

.shiny::before {
    content: '';
    position: absolute;
    top: 0;
    left: -150%;
    width: 100%;
    height: 100%;
    background: linear-gradient(120deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.2));
    transform: skewX(-20deg);
    transition: 0.7s;
    pointer-events: none;
}

/* Define the swoosh animation */
.animate-shine::before {
    animation: shine-swoosh 1.5s;
}

@keyframes shine-swoosh {
    0% {
        left: -150%;
    }
    50% {
        left: 100%;
    }
    100% {
        left: 150%;
    }
}



/*chat---------------------------------*/
.chat {
    margin-left: 20px;
    width: 300px; /* Adjust as needed */
    height: 400px;
    padding: 10px;
    box-sizing: border-box;
    background-color: #fff;
    display: flex;
    flex-direction: column;
    border-radius: 5px;

}

.messages {
    flex: 1;
    overflow-y: auto;
    margin-bottom: 10px;
    padding: 5px;
    max-height: 400px;
    background-color: #b8c7e4;
}


.message-icon {
    padding-right: 3px;
}

/* Styles for messages without an author */
.message.message-no-author {
    color: black;
    text-align: center;
    align-items: center;
    background-color: #ffffff00;
}

.message {
    margin-bottom: 5px;
    padding: 5px;
    border-radius: 5px;
    background-color: #ffffff;
    overflow-wrap: break-word; /* Ensure long words wrap */
    vertical-align: middle; /* Ensures the icon aligns with text */
}

button { /*send button*/
    width: 80px;
    padding: 5px;
    margin-left: 10px;
}

.input-container { /*message input*/
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 10px; /* Adjust the value to create the desired space */

}

/*username screen---------------------------*/
.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.7);
    display: flex;
    align-items: center;
    justify-content: center;
}

.textInput {
    flex-grow: 1;
    padding: 5px;
}

.overlay-content {
    background: #fff;
    padding: 20px;
    border-radius: 5px;
    text-align: center;
}

/*player list---------------------------------------*/
.player-list {
    margin-right: 20px;
    box-sizing: border-box;
    background-color: #fff;
    padding: 10px;
    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
    overflow-y: auto;
    width: 300px; /* Adjust as needed */
    max-height: 400px; /* Adjust as needed */
    border-radius: 5px;

}

.player {
    display: flex;
    align-items: center;
    background-color: #4b4f75;
    margin-bottom: 5px;
    padding: 5px;
    border-radius: 5px;
    overflow-wrap: break-word; 
    box-sizing: border-box;
}

.player-icon {

    font-size: 24px;
    margin-right: 10px;
}


.player-name {
    font-weight: bold;
    margin-right: 10px;
}

/*NOTIFICATOIN----------------------------------------------------*/
#notification-container {
    position: absolute; /* Changed from absolute to fixed */
    bottom: 50%;
    right: 50%;
    z-index: 9999; 
    transform: translate(50%, 50%); /* Centers the container */
}

.notification {
    background-color: #333;
    color: #fff;
    padding: 15px;
    margin-bottom: 10px;
    border-radius: 5px;
    position: relative;
    opacity: 1;
    transition: opacity 1s cubic-bezier(0.5, 0, 1, .5), transform 1s cubic-bezier(0, .5, .5, 1);
    transform: translateY(0);
    z-index: 99999; 
}

.notification.fade-out {
    opacity: 0;
    transform: translateY(-50px);
}

